--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="/careers">Careers</a></li>
-            <li><a href="/why-chipr">Why Chipr</a></li>
-            <li><a href="/success-stories">Success Stories</a></li>
-            <li><a href="/role-highlights">Role Highlights</a></li>
+            <li><a href="careers.html">Careers</a></li>
+            <li><a href="why-chipr.html">Why Chipr</a></li>
+            <li><a href="success-stories.html">Success Stories</a></li>
+            <li><a href="role-highlights.html">Role Highlights</a></li>
             <li><a class="cta-btn" href="index.html#about">Apply Now</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -67,6 +67,26 @@
       <!-- Hero Section -->
       <section id="hero" class="hero section">
         <div class="container-fluid g-0">
+          <div class="marquee">
+            <div class="marquee-content">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+              <img src="./assets/img/hero-logo.svg" alt="Image 1">
+            </div>
+          </div>
           <div class="row g-0 mt-3 d-none d-md-flex d-lg-flex d-xl-flex">
             <div class="col-3 offset-1 d-flex flex-column justify-content-end m">
               <div class="content-wrap">
@@ -149,8 +169,8 @@
             </div>
           </div>
 
-          <div class="row g-0 d-flex d-md-none d-lg-none d-xl-none">
-            <div class="col-3 d-flex flex-column justify-content-end">
+          <div class="row g-0 d-flex d-md-none d-lg-none d-xl-none align-items-stretch">
+            <div class="col-3 d-flex flex-column justify-content-end h-100">
               <div class="horizontal-text-wrap">
                 <div class="horizontal-text">
                   <h2 data-aos="fade-up" data-aos-delay="100">
@@ -159,7 +179,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-9">
+            <div class="col-9 h-100">
               <div class="video-container">
                 <video
                   class="responsive-video"
@@ -180,11 +200,12 @@
             </div>
             <div class="col-12 position-relative">
               <div class="down-arrow"></div>
-              <div class="content-wrapper">
+            
               <h1 data-aos="fade-up" data-aos-delay="150">
                 ALEX <br />
                 JOHNSON
               </h1>
+              <div class="content-wrapper">
               <h6 data-aos="fade-up" data-aos-delay="200">
                 Thinks you'd be perfect for Our Team
               </h6>
