--- a/careers.html
+++ b/careers.html
@@ -244,7 +244,7 @@
       </section>
       <!-- /Clients Section -->
     </main>
-
+    
     <footer id="footer" class="footer dark-background">
       <div class="d-none d-md-block d-lg-block d-xl-block">
         <div class="container footer-top px-0">
@@ -255,10 +255,10 @@
             <div class="col-8">
               <nav class="footer-navmenu">
                 <ul>
-                  <li><a href="/careers">Careers</a></li>
-                  <li><a href="/why-chipr">Why Chipr</a></li>
-                  <li><a href="/success-stories">Success Stories</a></li>
-                  <li><a href="/role-highlights">Role Highlights</a></li>
+                  <li><a href="careers.html">Careers</a></li>
+                  <li><a href="why-chipr.html">Why Chipr</a></li>
+                  <li><a href="success-stories.html">Success Stories</a></li>
+                  <li><a href="role-highlights.html">Role Highlights</a></li>
                   <li>
                     <a class="cta-btn" href="index.html#about">Apply Now</a>
                   </li>
@@ -291,10 +291,10 @@
             <div class="col-12 mt-2">
               <nav class="footer-navmenu">
                 <ul>
-                  <li><a href="/careers">Careers</a></li>
-                  <li><a href="/why-chipr">Why Chipr</a></li>
-                  <li><a href="/success-stories">Success Stories</a></li>
-                  <li><a href="/role-highlights">Role Highlights</a></li>
+                  <li><a href="careers.html">Careers</a></li>
+                  <li><a href="why-chipr.html">Why Chipr</a></li>
+                  <li><a href="success-stories.html">Success Stories</a></li>
+                  <li><a href="role-highlights.html">Role Highlights</a></li>
                 </ul>
               </nav>
             </div>
