--- a/why-chipr.html
+++ b/why-chipr.html
@@ -521,10 +521,10 @@
               <div class="col-12 mt-2">
                 <nav class="footer-navmenu">
                   <ul>
-                    <li><a href="/careers">Careers</a></li>
-                    <li><a href="/why-chipr">Why Chipr</a></li>
-                    <li><a href="/success-stories">Success Stories</a></li>
-                    <li><a href="/role-highlights">Role Highlights</a></li>
+                    <li><a href="careers.html">Careers</a></li>
+                    <li><a href="why-chipr.html">Why Chipr</a></li>
+                    <li><a href="success-stories.html">Success Stories</a></li>
+                    <li><a href="role-highlights.html">Role Highlights</a></li>
                   </ul>
                 </nav>
               </div>
