--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <li><a href="why-chipr.html">Why Chipr</a></li>
             <li><a href="success-stories.html">Success Stories</a></li>
             <li><a href="role-highlights.html">Role Highlights</a></li>
-            <li><a class="cta-btn" href="index.html#about">Apply Now</a></li>
+            <li><a class="cta-btn" href="apply-now.html">Apply Now</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -300,7 +300,7 @@
                   <li><a href="/success-stories">Success Stories</a></li>
                   <li><a href="/role-highlights">Role Highlights</a></li>
                   <li>
-                    <a class="cta-btn" href="index.html#about">Apply Now</a>
+                    <a class="cta-btn"  href="apply-now.html">Apply Now</a>
                   </li>
                 </ul>
               </nav>
@@ -326,7 +326,7 @@
               <img src="./assets/img/logo.svg" alt="chipr" />
             </div>
             <div class="col-6" style="text-align: right">
-              <a class="cta-btn" href="index.html#about">Apply Now</a>
+              <a class="cta-btn"  href="apply-now.html">Apply Now</a>
             </div>
             <div class="col-12 mt-2">
               <nav class="footer-navmenu">
