--- a/why-chipr.html
+++ b/why-chipr.html
@@ -723,7 +723,7 @@
                 <p data-aos="fade-up" data-aos-delay="400" data-aos-anchor-placement="top-bottom">I've never seen so much support in a sales job.”</p>
                 </div>
                 <div class="quote-content-footer" data-aos="fade-up" data-aos-delay="500" data-aos-anchor-placement="top-bottom">
-                    <img src="./assets/img/image 6.png" class="img-fluid" alt="glassdoor" />
+                    <img src="./assets/img/image 6.png" width="128" class="img-fluid" alt="glassdoor" />
                 </div>
               </div>
             </div>
@@ -734,7 +734,7 @@
                 <p data-aos="fade-up" data-aos-delay="500" data-aos-anchor-placement="top-bottom">Culture here is next-level.”</p>
                 </div>
                 <div class="quote-content-footer" data-aos="fade-up" data-aos-delay="600" data-aos-anchor-placement="top-bottom">
-                    <img src="./assets/img/image 9.png" class="img-fluid" alt="indeed" />
+                    <img src="./assets/img/image 9.png"  width="128" class="img-fluid" alt="indeed" />
                 </div>
               </div>
             </div>
