--- a/careers.html
+++ b/careers.html
@@ -60,16 +60,16 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li data-aos="fade-up" data-aos-delay="250">
+            <li data-aos="fade-down" data-aos-delay="250">
               <a class="active" href="careers.html">Careers</a>
             </li>
-            <li data-aos="fade-up" data-aos-delay="300">
+            <li data-aos="fade-down" data-aos-delay="300">
               <a href="why-chipr.html">Why Chipr</a>
             </li>
-            <li data-aos="fade-up" data-aos-delay="350">
+            <li data-aos="fade-down" data-aos-delay="350">
               <a href="success-stories.html">Success Stories</a>
             </li>
-            <li data-aos="fade-up" data-aos-delay="400">
+            <li data-aos="fade-down" data-aos-delay="400">
               <a href="role-highlights.html">Role Highlights</a>
             </li>
             <li data-aos="zoom-in" data-aos-delay="450">
@@ -83,7 +83,7 @@
     <main class="main">
       <!-- Careers Hero Section -->
       <section id="careers" class="career section position-relative">
-        <div class="container position-relative">
+        <div class="container position-relative custom-container">
           <div class="marquee-container">
             <div class="marquee-track">
               <!-- First SVG -->
@@ -250,13 +250,15 @@
             </div>
           </div>
           <div class="row gy-4 position-relative z-10">
-            <div class="col-lg-6">
+            <div class="col-12 col-md-6">
+              <div class="name-content">
               <div class="content-wrap">
                 <div
                   class="default-text-color h1"
                   data-aos="fade-up"
                   data-aos-delay="100"
                   data-aos-anchor-placement="top-bottom"
+                  id="username"
                 >
                   Chris Ray,
                 </div>
@@ -276,12 +278,49 @@
                   data-aos-delay="300"
                   data-aos-anchor-placement="top-bottom"
                 >
-                  <strong>Alex Johnson</strong> opened this door— let’s make it
+                  <strong><span id="recommendedBy">Johnson</span></strong> opened this door— let’s make it
                   happen.
                 </p>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="no-name-content">
+              <div class="content-wrap">
+                <div
+                  class="default-text-color h1"
+                  data-aos="fade-up"
+                  data-aos-delay="100"
+                  data-aos-anchor-placement="top-bottom"
+                  id="username"
+                >
+                Turn Your Energy Into
+                </div>
+                <div
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                  data-aos-anchor-placement="top-bottom"
+                  class="h1"
+                >
+                Earnings at ChipR
+                </div>
+              </div>
+              <div class="content-wrap2">
+                <p
+                  class="body-01"
+                  data-aos="fade-up"
+                  data-aos-delay="300"
+                  data-aos-anchor-placement="top-bottom"
+                >
+                Join our elite sales team
+                </p>
+                <div data-aos="fade-up"
+                data-aos-delay="400"
+                data-aos-anchor-placement="top-bottom">
+                <a class="cta-btn cta-btn-b mt-3"   href="apply-now.html">Join now </a>
+              </div>
+            </div>
+            </div>
+            </div>
+            <div class="col-12 col-md-6">
               <div class="content ps-0 ps-lg-5">
                 <div
                   class="video-wrap"
@@ -310,12 +349,12 @@
         </div>
 
         <div class="side-btn" data-aos="flip-left" data-aos-delay="80">
-          <img src="assets/img/side-btn.png" height="127" />
+          <a href="apply-now.html"><img src="assets/img/side-btn.png" height="127" /></a>
         </div>
       </section>
       <!-- /Career Section -->
 
-      <div class="container">
+      <div class="container custom-container">
         <div
           class="spacer"
           data-aos="fade-up"
@@ -325,7 +364,7 @@
       </div>
       <!-- Stats Section -->
       <section id="stats" class="stats section position-relative">
-        <div class="container d-none d-md-block d-lg-block">
+        <div class="container d-none d-md-block d-lg-block custom-container" >
           <div class="row gy-4">
             <div
               class="col-lg-3 col-md-3"
@@ -433,7 +472,7 @@
       <!-- Services Section -->
       <section id="services" class="performers section">
         <!-- Section Title -->
-        <div class="container">
+        <div class="container custom-container">
           <div class="row align-items-stretch">
             <div class="col-12 col-md-5">
               <h2
@@ -545,7 +584,7 @@
       <!-- Clients Section -->
       <section id="logo-animation" class="clients section
       ">
-        <div class="container">
+        <div class="container custom-container">
           <div class="row gy-4 align-items-stretch">
             <div class="col-xl-5 col-md-5 col-12 h-100">
               <div
@@ -593,12 +632,12 @@
                   data-aos-anchor-placement="top-bottom"
                 ></p>
                 <div class="d-none d-xl-block d-lg-block d-md-block">
-                  <a class="cta-btn cta-btn-b clients" id="afterButton">More Success Stories</a>
+                  <a class="cta-btn cta-btn-b clients" id="afterButton" href="success-stories.html">More Success Stories</a>
                 </div>
               </div>
             </div>
             <div class="d-flex d-xl-none d-lg-none d-md-none col-12">
-              <a class="cta-btn cta-btn-b">More Success Stories </a>
+              <a class="cta-btn cta-btn-b" href="success-stories.html">More Success Stories </a>
             </div>
           </div>
 
@@ -661,24 +700,25 @@
                 alt="chipr"
                 data-aos="fade-up"
                 data-aos-delay="250"
+                data-aos-anchor-placement="center-center"
               />
             </div>
             <div class="col-8">
               <nav class="footer-navmenu">
                 <ul>
-                  <li data-aos="fade-up" data-aos-delay="100">
+                  <li data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor-placement="center-left">
                     <a href="/careers">Careers</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="150">
+                  <li data-aos="zoom-in-right" data-aos-delay="180">
                     <a href="/why-chipr">Why Chipr</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="200">
+                  <li data-aos="zoom-in-right" data-aos-delay="260">
                     <a href="/success-stories">Success Stories</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="250">
+                  <li data-aos="zoom-in-right" data-aos-delay="340">
                     <a href="/role-highlights">Role Highlights</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="300">
+                  <li data-aos="zoom-in-right" data-aos-delay="420">
                     <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
                   </li>
                 </ul>
@@ -689,19 +729,22 @@
                 <a
                   href="https://www.facebook.com/profile.php?id=61559278246860"
                   data-aos="zoom-in-left"
-                  data-aos-delay="260"
+                  data-aos-delay="100"
+                  target="_blank"
                   ><i class="bi bi-facebook"></i
                 ></a>
                 <a
                   href="https://www.instagram.com/chipr.sales/"
                   data-aos="zoom-in-left"
-                  data-aos-delay="270"
+                  data-aos-delay="200"
+                  target="_blank"
                   ><i class="bi bi-instagram"></i
                 ></a>
                 <a
                   href="https://www.linkedin.com/company/chiprhomesolutions/"
                   data-aos="zoom-in-left"
-                  data-aos-delay="280"
+                  data-aos-delay="200"
+                  target="_blank"
                   ><i class="bi bi-linkedin"></i
                 ></a>
               </div>
@@ -755,7 +798,8 @@
         </div>
         <div class="container copyright text-left">
           <div class="row">
-            <div class="col">
+            <div class="col"   data-aos="fade-up"
+            data-aos-delay="100">
               <p>
                 © <span>2025</span> <span class="px-1 sitename">Chipr</span>
               </p>
@@ -764,20 +808,23 @@
               <div class="social-links d-flex justify-content-end">
                 <a
                   href="https://www.facebook.com/profile.php?id=61559278246860"
+                  target="_blank"
                   data-aos="fade-up"
-                  data-aos-delay="260"
+                  data-aos-delay="160"
                   ><i class="bi bi-facebook"></i
                 ></a>
                 <a
                   href="https://www.instagram.com/chipr.sales/"
                   data-aos="fade-up"
-                  data-aos-delay="270"
+                  target="_blank"
+                  data-aos-delay="170"
                   ><i class="bi bi-instagram"></i
                 ></a>
                 <a
                   href="https://www.linkedin.com/company/chiprhomesolutions/"
                   data-aos="fade-up"
-                  data-aos-delay="280"
+                  data-aos-delay="180"
+                  target="_blank"
                   ><i class="bi bi-linkedin"></i
                 ></a>
               </div>
@@ -797,5 +844,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/DrawSVGPlugin.min.js"></script>
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script>
+       const preloader = document.getElementById('preloader');
+      let name = localStorage.getItem('username')
+      let recommendedByName = localStorage.getItem('recommendedBy')
+      if(name){
+        $('.name-content').addClass('d-block');
+        $('.no-name-content').addClass('d-none')
+        $('#username').text(name)
+        $('#recommendedBy').text(recommendedByName)
+        preloader.remove()
+      }
+      else{
+        $('.no-name-content').addClass('d-block');
+        $('.name-content').addClass('d-none')
+        preloader.remove()
+      }
+    </script>
   </body>
 </html>
