bug fixes and api added

--- a/apply-now.html
+++ b/apply-now.html
@@ -477,32 +477,62 @@
       </div>
       <!-- /About Section -->
     </main>
-
-    <footer id="footer" class="footer dark-background">
+    <footer id="footer" class="footer dark-background" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
       <div class="d-none d-md-block d-lg-block d-xl-block">
         <div class="container footer-top px-0">
           <div class="row gx-0">
             <div class="col-12">
-              <img src="./assets/img/logo.svg" alt="chipr" />
+              <img
+                src="./assets/img/logo.svg"
+                alt="chipr"
+                data-aos="fade-up"
+                data-aos-delay="200"
+              />
             </div>
             <div class="col-8">
               <nav class="footer-navmenu">
                 <ul>
-                  <li><a href="careers.html">Careers</a></li>
-                  <li><a href="why-chipr.html">Why Chipr</a></li>
-                  <li><a href="success-stories.html">Success Stories</a></li>
-                  <li><a href="role-highlights.html">Role Highlights</a></li>
-                  <li>
-                    <a class="cta-btn" href="apply-now.html">Apply Now</a>
+                  <li data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="center-left">
+                    <a href="/careers">Careers</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="180">
+                    <a href="/why-chipr">Why Chipr</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="260">
+                    <a href="/success-stories">Success Stories</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="340">
+                    <a href="/role-highlights">Role Highlights</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="420">
+                    <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
                   </li>
                 </ul>
               </nav>
             </div>
             <div class="col-4">
               <div class="social-links d-flex justify-content-end">
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a
+                  href="https://www.facebook.com/profile.php?id=61559278246860"
+                  data-aos="fade-up"
+                  data-aos-delay="100"
+                  target="_blank"
+                  ><i class="bi bi-facebook"></i
+                ></a>
+                <a
+                  href="https://www.instagram.com/chipr.sales/"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                  target="_blank"
+                  ><i class="bi bi-instagram"></i
+                ></a>
+                <a
+                  href="https://www.linkedin.com/company/chiprhomesolutions/"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                  target="_blank"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -516,18 +546,37 @@
         <div class="container footer-top">
           <div class="row gx-0">
             <div class="col-6">
-              <img src="./assets/img/logo.svg" alt="chipr" />
+              <img
+                src="./assets/img/logo.svg"
+                alt="chipr"
+                data-aos="fade-up"
+                data-aos-delay="250"
+              />
             </div>
             <div class="col-6" style="text-align: right">
-              <a class="cta-btn" href="apply-now.html">Apply Now</a>
+              <a
+                class="cta-btn cta-btn-w"
+                href="apply-now.html"
+                data-aos="fade-up"
+                data-aos-delay="270"
+                >Apply Now</a
+              >
             </div>
             <div class="col-12 mt-2">
               <nav class="footer-navmenu">
                 <ul>
-                  <li><a href="careers.html">Careers</a></li>
-                  <li><a href="why-chipr.html">Why Chipr</a></li>
-                  <li><a href="success-stories.html">Success Stories</a></li>
-                  <li><a href="role-highlights.html">Role Highlights</a></li>
+                  <li data-aos="fade-up" data-aos-delay="100">
+                    <a href="/careers">Careers</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="200">
+                    <a href="/why-chipr">Why Chipr</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <a href="/success-stories">Success Stories</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="400">
+                    <a href="/role-highlights">Role Highlights</a>
+                  </li>
                 </ul>
               </nav>
             </div>
@@ -535,31 +584,41 @@
         </div>
         <div class="container copyright text-left">
           <div class="row">
-            <div class="col">
+            <div class="col"   data-aos="fade-up"
+            data-aos-delay="100">
               <p>
                 © <span>2025</span> <span class="px-1 sitename">Chipr</span>
               </p>
             </div>
             <div class="col">
               <div class="social-links d-flex justify-content-end">
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a
+                  href="https://www.facebook.com/profile.php?id=61559278246860"
+                  target="_blank"
+                  data-aos="fade-up"
+                  data-aos-delay="160"
+                  ><i class="bi bi-facebook"></i
+                ></a>
+                <a
+                  href="https://www.instagram.com/chipr.sales/"
+                  data-aos="fade-up"
+                  target="_blank"
+                  data-aos-delay="170"
+                  ><i class="bi bi-instagram"></i
+                ></a>
+                <a
+                  href="https://www.linkedin.com/company/chiprhomesolutions/"
+                  data-aos="fade-up"
+                  data-aos-delay="180"
+                  target="_blank"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </footer>
-
-    <!-- Scroll Top -->
-    <a
-      href="#"
-      id="scroll-top"
-      class="scroll-top d-flex align-items-center justify-content-center"
-      ><i class="bi bi-arrow-up-short"></i
-    ></a>
-
     <!-- Preloader -->
     <div id="preloader"></div>
 
@@ -722,12 +781,12 @@ checkFormStatus()
                   "name": nameVal,
                   "email": emailVal,
                   "phone_number": phoneVal,
-                  "date_of_birth": "",
-                  "address": "",
+                  "date_of_birth": null,
+                  "address": null,
                   "city": locationVal2, 
-                  "state": "",
-                  "postal_code": "",
-                  "country": "",
+                  "state": null,
+                  "postal_code": null,
+                  "country": null,
                   "referrer_id": referralId
                     }
         fetch(`https://core-services-api-e3a0bnafdsdbazb2.westus-01.azurewebsites.net/api/applications/apply`, {
@@ -741,13 +800,11 @@ checkFormStatus()
         })
         .then(async (response) => {
          const result = await response.json(); // Always parse JSON once
-
-          if (response.status === 200) {
+          if (response.ok) {
             $('#toast').removeClass('text-bg-danger').addClass('text-bg-success');
             $('.toast-body').text('Scheduled successfully!');
             const toast = new bootstrap.Toast(document.getElementById('toast'));
             toast.show();
-
             // Store and redirect
             localStorage.setItem('scheduled', JSON.stringify(result));
             window.location.href = 'scheduled.html';
@@ -757,9 +814,10 @@ checkFormStatus()
             if (response.status === 500) {
               $('.toast-body').text('Something went wrong. Please contact admin');
             } else {
+              debugger
               const errorMessages = Array.isArray(result.message)
                 ? result.message.join(' ')
-                : 'Submission failed.';
+                : result.message;
               $('.toast-body').text(errorMessages);
             }
 
