--- a/careers.html
+++ b/careers.html
@@ -699,26 +699,25 @@
                 src="./assets/img/logo.svg"
                 alt="chipr"
                 data-aos="fade-up"
-                data-aos-delay="250"
-                data-aos-anchor-placement="center-center"
+                data-aos-delay="200"
               />
             </div>
             <div class="col-8">
               <nav class="footer-navmenu">
                 <ul>
-                  <li data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor-placement="center-left">
+                  <li data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="center-left">
                     <a href="/careers">Careers</a>
                   </li>
-                  <li data-aos="zoom-in-right" data-aos-delay="180">
+                  <li data-aos="fade-up" data-aos-delay="180">
                     <a href="/why-chipr">Why Chipr</a>
                   </li>
-                  <li data-aos="zoom-in-right" data-aos-delay="260">
+                  <li data-aos="fade-up" data-aos-delay="260">
                     <a href="/success-stories">Success Stories</a>
                   </li>
-                  <li data-aos="zoom-in-right" data-aos-delay="340">
+                  <li data-aos="fade-up" data-aos-delay="340">
                     <a href="/role-highlights">Role Highlights</a>
                   </li>
-                  <li data-aos="zoom-in-right" data-aos-delay="420">
+                  <li data-aos="fade-up" data-aos-delay="420">
                     <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
                   </li>
                 </ul>
@@ -728,21 +727,21 @@
               <div class="social-links d-flex justify-content-end">
                 <a
                   href="https://www.facebook.com/profile.php?id=61559278246860"
-                  data-aos="zoom-in-left"
+                  data-aos="fade-up"
                   data-aos-delay="100"
                   target="_blank"
                   ><i class="bi bi-facebook"></i
                 ></a>
                 <a
                   href="https://www.instagram.com/chipr.sales/"
-                  data-aos="zoom-in-left"
+                  data-aos="fade-up"
                   data-aos-delay="200"
                   target="_blank"
                   ><i class="bi bi-instagram"></i
                 ></a>
                 <a
                   href="https://www.linkedin.com/company/chiprhomesolutions/"
-                  data-aos="zoom-in-left"
+                  data-aos="fade-up"
                   data-aos-delay="200"
                   target="_blank"
                   ><i class="bi bi-linkedin"></i
