--- a/role-highlights.html
+++ b/role-highlights.html
@@ -320,7 +320,7 @@
               <div class="timeline-content">
                 <div>
                   <img src="./assets/img/lunch.svg" />
-                  <h3>Victory Celebrationc <br />(4 PM)</h3>
+                  <h3>Victory Celebrations <br />(4 PM)</h3>
                   <p>Recap the day’s success, plan tomorrow’s hustle.</p>
                 </div>
               </div>
@@ -584,7 +584,7 @@
 
                     <div class="border-dotted-b">
                       <p>
-                        Total Potential Compensation <small>(with recruit bonus)</small
+                        Total Potential Compensation <small>(with recruitment bonus)</small
                         >
                       </p>
                       <h2 class="lead">$ <span id="totalComp">0.00</span></h2>
@@ -596,7 +596,7 @@
                     <p class="small mt-3">
                      <strong>Note:</strong>  Figures are based on past performance at the highest
                       targets within each tier. Earnings are not guaranteed and
-                      may vary. Crifer may change commission structures at any
+                      may vary. Chipr may change commission structures at any
                       time.
                     </p>
                   </div>
@@ -618,25 +618,25 @@
                 src="./assets/img/logo.svg"
                 alt="chipr"
                 data-aos="fade-up"
-                data-aos-delay="250"
+                data-aos-delay="200"
               />
             </div>
             <div class="col-8">
               <nav class="footer-navmenu">
                 <ul>
-                  <li data-aos="fade-up" data-aos-delay="100">
+                  <li data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="center-left">
                     <a href="/careers">Careers</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="150">
+                  <li data-aos="fade-up" data-aos-delay="180">
                     <a href="/why-chipr">Why Chipr</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="200">
+                  <li data-aos="fade-up" data-aos-delay="260">
                     <a href="/success-stories">Success Stories</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="250">
+                  <li data-aos="fade-up" data-aos-delay="340">
                     <a href="/role-highlights">Role Highlights</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="300">
+                  <li data-aos="fade-up" data-aos-delay="420">
                     <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
                   </li>
                 </ul>
@@ -646,20 +646,23 @@
               <div class="social-links d-flex justify-content-end">
                 <a
                   href="https://www.facebook.com/profile.php?id=61559278246860"
-                  data-aos="zoom-in-left"
-                  data-aos-delay="260"
+                  data-aos="fade-up"
+                  data-aos-delay="100"
+                  target="_blank"
                   ><i class="bi bi-facebook"></i
                 ></a>
                 <a
                   href="https://www.instagram.com/chipr.sales/"
-                  data-aos="zoom-in-left"
-                  data-aos-delay="270"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                  target="_blank"
                   ><i class="bi bi-instagram"></i
                 ></a>
                 <a
                   href="https://www.linkedin.com/company/chiprhomesolutions/"
-                  data-aos="zoom-in-left"
-                  data-aos-delay="280"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                  target="_blank"
                   ><i class="bi bi-linkedin"></i
                 ></a>
               </div>
@@ -713,7 +716,8 @@
         </div>
         <div class="container copyright text-left">
           <div class="row">
-            <div class="col">
+            <div class="col"   data-aos="fade-up"
+            data-aos-delay="100">
               <p>
                 © <span>2025</span> <span class="px-1 sitename">Chipr</span>
               </p>
@@ -722,20 +726,23 @@
               <div class="social-links d-flex justify-content-end">
                 <a
                   href="https://www.facebook.com/profile.php?id=61559278246860"
+                  target="_blank"
                   data-aos="fade-up"
-                  data-aos-delay="260"
+                  data-aos-delay="160"
                   ><i class="bi bi-facebook"></i
                 ></a>
                 <a
                   href="https://www.instagram.com/chipr.sales/"
                   data-aos="fade-up"
-                  data-aos-delay="270"
+                  target="_blank"
+                  data-aos-delay="170"
                   ><i class="bi bi-instagram"></i
                 ></a>
                 <a
                   href="https://www.linkedin.com/company/chiprhomesolutions/"
                   data-aos="fade-up"
-                  data-aos-delay="280"
+                  data-aos-delay="180"
+                  target="_blank"
                   ><i class="bi bi-linkedin"></i
                 ></a>
               </div>
