--- a/success-stories.html
+++ b/success-stories.html
@@ -300,7 +300,7 @@
                   <img src="./assets/img/sucess-story-1.png" class="img-fluid" />
                   <div class="img-footer">
                     <h6>Jordan Martinez</h6>
-                    <p>$85K in first year, leads 15 reps.</p>
+                    <p>$85K in the first year, leads 15 reps.</p>
                   </div>
                 </div>
                 <div class="back">
@@ -315,7 +315,7 @@
               <img src="./assets/img/sucess-story-2.png" class="img-fluid" />
               <div class="img-footer">
                 <h6>Sarah Chen</h6>
-                <p>Promoted in 4 months—now overseeing two markets.</p>
+                <p>Promoted in 4 months—now oversees two markets.</p>
               </div>
             </div>
             <div class="back">
@@ -329,7 +329,7 @@
               <img src="./assets/img/sucess-story-3.png" class="img-fluid" />
               <div class="img-footer">
                 <h6>Marcus Thompson</h6>
-                <p>200+ sales, now training new hires.</p>
+                <p>200+ sales, now trains new hires.</p>
               </div>
             </div>
             <div class="back">
@@ -376,7 +376,7 @@
                   <img src="./assets/img/performer.svg" width="64" class="img-fluid"/>
                 </div>
                 <div class="col-12 col-lg-7 col-md-7">
-                  <p>Top performer weekly:</p>
+                  <p>Top weekly performer:</p>
                     <h2>$2.5K</h2>
                   </div>
                   </div>
@@ -468,7 +468,7 @@
 
     </main>
 
-    <footer id="footer" class="footer dark-background"  data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
+    <footer id="footer" class="footer dark-background" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
       <div class="d-none d-md-block d-lg-block d-xl-block">
         <div class="container footer-top px-0">
           <div class="row gx-0">
@@ -477,25 +477,25 @@
                 src="./assets/img/logo.svg"
                 alt="chipr"
                 data-aos="fade-up"
-                data-aos-delay="250"
+                data-aos-delay="200"
               />
             </div>
             <div class="col-8">
               <nav class="footer-navmenu">
                 <ul>
-                  <li data-aos="fade-up" data-aos-delay="100">
+                  <li data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="center-left">
                     <a href="/careers">Careers</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="150">
+                  <li data-aos="fade-up" data-aos-delay="180">
                     <a href="/why-chipr">Why Chipr</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="200">
+                  <li data-aos="fade-up" data-aos-delay="260">
                     <a href="/success-stories">Success Stories</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="250">
+                  <li data-aos="fade-up" data-aos-delay="340">
                     <a href="/role-highlights">Role Highlights</a>
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="300">
+                  <li data-aos="fade-up" data-aos-delay="420">
                     <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
                   </li>
                 </ul>
@@ -505,20 +505,23 @@
               <div class="social-links d-flex justify-content-end">
                 <a
                   href="https://www.facebook.com/profile.php?id=61559278246860"
-                  data-aos="zoom-in-left"
-                  data-aos-delay="260"
+                  data-aos="fade-up"
+                  data-aos-delay="100"
+                  target="_blank"
                   ><i class="bi bi-facebook"></i
                 ></a>
                 <a
                   href="https://www.instagram.com/chipr.sales/"
-                  data-aos="zoom-in-left"
-                  data-aos-delay="270"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                  target="_blank"
                   ><i class="bi bi-instagram"></i
                 ></a>
                 <a
                   href="https://www.linkedin.com/company/chiprhomesolutions/"
-                  data-aos="zoom-in-left"
-                  data-aos-delay="280"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                  target="_blank"
                   ><i class="bi bi-linkedin"></i
                 ></a>
               </div>
@@ -572,7 +575,8 @@
         </div>
         <div class="container copyright text-left">
           <div class="row">
-            <div class="col">
+            <div class="col"   data-aos="fade-up"
+            data-aos-delay="100">
               <p>
                 © <span>2025</span> <span class="px-1 sitename">Chipr</span>
               </p>
@@ -581,20 +585,23 @@
               <div class="social-links d-flex justify-content-end">
                 <a
                   href="https://www.facebook.com/profile.php?id=61559278246860"
+                  target="_blank"
                   data-aos="fade-up"
-                  data-aos-delay="260"
+                  data-aos-delay="160"
                   ><i class="bi bi-facebook"></i
                 ></a>
                 <a
                   href="https://www.instagram.com/chipr.sales/"
                   data-aos="fade-up"
-                  data-aos-delay="270"
+                  target="_blank"
+                  data-aos-delay="170"
                   ><i class="bi bi-instagram"></i
                 ></a>
                 <a
                   href="https://www.linkedin.com/company/chiprhomesolutions/"
                   data-aos="fade-up"
-                  data-aos-delay="280"
+                  data-aos-delay="180"
+                  target="_blank"
                   ><i class="bi bi-linkedin"></i
                 ></a>
               </div>
@@ -616,6 +623,12 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script>
+    let scheduledData = localStorage.getItem('scheduled')
+    if(scheduledData){
+      
+    }
+  </script>
 </body>
 </html>
 
