--- a/scheduled.html
+++ b/scheduled.html
@@ -75,13 +75,13 @@
           <div class="row gy-4 mt-6">
             <div class="col-12 col-xl-5 col-lg-5 col-md-5">
               <h1 data-aos="fade-up" data-aos-delay="100">
-                Welcome to <br />
+                Welcome to
                 the Team!
               </h1>
-              <h6 data-aos="fade-up" data-aos-delay="150">
+              <!-- <h6 data-aos="fade-up" data-aos-delay="150">
                 Your interview is booked for <br />
                 11:30 AM, 25 March 2025
-              </h6>
+              </h6> -->
 
               <p data-aos="fade-up" data-aos-delay="200">
                 Check your email for tips on what to bring. Meanwhile, discover
@@ -106,18 +106,20 @@
                     <strong>Quick links</strong>
                   </p>
                   <ul>
-                    <li data-aos="fade-up" data-aos-delay="120">Role Guide</li>
-                    <li data-aos="fade-up" data-aos-delay="130">
-                      Success Stories
+                    <li data-aos="fade-up" data-aos-delay="200">
+                      Role Guide</li>
+                    <li data-aos="fade-up" data-aos-delay="300">
+                     <a class="text-white" href="success-stories.html"> Success Stories </a>
                     </li>
-                    <li data-aos="fade-up" data-aos-delay="140">FAQ</li>
+                    <li data-aos="fade-up" data-aos-delay="400">FAQ</li>
                   </ul>
                 </div>
                 <div class="col-12 col-xl-6 col-lg-6 col-md-6">
-                  <p data-aos="fade-up" data-aos-delay="100">
-                    <span class="f-w-600">Recruiter Contact:</span
-                    ><br />info@chipr.com <br />00000000000
-                  </p>
+                  <div data-aos="fade-up" data-aos-delay="100">
+                    <div class="p">Recruiter Contact:</div>
+                    <div class="p"> info@chipr.com</div> 
+                    <div class="p">00000000000</div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -126,13 +128,13 @@
                 <strong>Join</strong>
                 <span class="text-accent"> #ChiprLife </span> on
               </p>
-              <div class="img" data-aos="fade-up" data-aos-delay="120">
-                <img src="./assets/img/instagram.svg" />
-                <img src="./assets/img/linkedin.svg" />
+              <div class="img" data-aos="fade-up" data-aos-delay="200">
+                <a href="https://www.instagram.com/chipr.sales/" target="_blank"><img src="./assets/img/instagram.svg" /></a>
+                <a href="https://www.linkedin.com/company/chiprhomesolutions/" target="_blank"><img src="./assets/img/linkedin.svg" /></a>
               </div>
 
-              <p data-aos="fade-up" data-aos-delay="130">
-                Tag your journey with<strong> #ChiprBound!</strong>
+              <p data-aos="fade-up" data-aos-delay="300">
+                Tag your journey with <br/><strong> #ChiprBound!</strong>
               </p>
             </div>
           </div>
@@ -141,31 +143,62 @@
       <!-- /About Section -->
     </main>
 
-    <footer id="footer" class="footer dark-background">
+    <footer id="footer" class="footer dark-background" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
       <div class="d-none d-md-block d-lg-block d-xl-block">
         <div class="container footer-top px-0">
           <div class="row gx-0">
             <div class="col-12">
-              <img src="./assets/img/logo.svg" alt="chipr" />
+              <img
+                src="./assets/img/logo.svg"
+                alt="chipr"
+                data-aos="fade-up"
+                data-aos-delay="200"
+              />
             </div>
             <div class="col-8">
               <nav class="footer-navmenu">
                 <ul>
-                  <li><a href="careers.html">Careers</a></li>
-                  <li><a href="why-chipr.html">Why Chipr</a></li>
-                  <li><a href="success-stories.html">Success Stories</a></li>
-                  <li><a href="role-highlights.html">Role Highlights</a></li>
-                  <li>
-                    <a class="cta-btn" href="apply-now.html">Apply Now</a>
+                  <li data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="center-left">
+                    <a href="/careers">Careers</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="180">
+                    <a href="/why-chipr">Why Chipr</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="260">
+                    <a href="/success-stories">Success Stories</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="340">
+                    <a href="/role-highlights">Role Highlights</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="420">
+                    <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
                   </li>
                 </ul>
               </nav>
             </div>
             <div class="col-4">
               <div class="social-links d-flex justify-content-end">
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a
+                  href="https://www.facebook.com/profile.php?id=61559278246860"
+                  data-aos="fade-up"
+                  data-aos-delay="100"
+                  target="_blank"
+                  ><i class="bi bi-facebook"></i
+                ></a>
+                <a
+                  href="https://www.instagram.com/chipr.sales/"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                  target="_blank"
+                  ><i class="bi bi-instagram"></i
+                ></a>
+                <a
+                  href="https://www.linkedin.com/company/chiprhomesolutions/"
+                  data-aos="fade-up"
+                  data-aos-delay="200"
+                  target="_blank"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -179,18 +212,37 @@
         <div class="container footer-top">
           <div class="row gx-0">
             <div class="col-6">
-              <img src="./assets/img/logo.svg" alt="chipr" />
+              <img
+                src="./assets/img/logo.svg"
+                alt="chipr"
+                data-aos="fade-up"
+                data-aos-delay="250"
+              />
             </div>
             <div class="col-6" style="text-align: right">
-              <a class="cta-btn" href="apply-now.html">Apply Now</a>
+              <a
+                class="cta-btn cta-btn-w"
+                href="apply-now.html"
+                data-aos="fade-up"
+                data-aos-delay="270"
+                >Apply Now</a
+              >
             </div>
             <div class="col-12 mt-2">
               <nav class="footer-navmenu">
                 <ul>
-                  <li><a href="careers.html">Careers</a></li>
-                  <li><a href="why-chipr.html">Why Chipr</a></li>
-                  <li><a href="success-stories.html">Success Stories</a></li>
-                  <li><a href="role-highlights.html">Role Highlights</a></li>
+                  <li data-aos="fade-up" data-aos-delay="100">
+                    <a href="/careers">Careers</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="200">
+                    <a href="/why-chipr">Why Chipr</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <a href="/success-stories">Success Stories</a>
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="400">
+                    <a href="/role-highlights">Role Highlights</a>
+                  </li>
                 </ul>
               </nav>
             </div>
@@ -198,31 +250,41 @@
         </div>
         <div class="container copyright text-left">
           <div class="row">
-            <div class="col">
+            <div class="col"   data-aos="fade-up"
+            data-aos-delay="100">
               <p>
                 © <span>2025</span> <span class="px-1 sitename">Chipr</span>
               </p>
             </div>
             <div class="col">
               <div class="social-links d-flex justify-content-end">
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a
+                  href="https://www.facebook.com/profile.php?id=61559278246860"
+                  target="_blank"
+                  data-aos="fade-up"
+                  data-aos-delay="160"
+                  ><i class="bi bi-facebook"></i
+                ></a>
+                <a
+                  href="https://www.instagram.com/chipr.sales/"
+                  data-aos="fade-up"
+                  target="_blank"
+                  data-aos-delay="170"
+                  ><i class="bi bi-instagram"></i
+                ></a>
+                <a
+                  href="https://www.linkedin.com/company/chiprhomesolutions/"
+                  data-aos="fade-up"
+                  data-aos-delay="180"
+                  target="_blank"
+                  ><i class="bi bi-linkedin"></i
+                ></a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </footer>
-
-    <!-- Scroll Top -->
-    <a
-      href="#"
-      id="scroll-top"
-      class="scroll-top d-flex align-items-center justify-content-center"
-      ><i class="bi bi-arrow-up-short"></i
-    ></a>
-
     <!-- Preloader -->
     <div id="preloader"></div>
 
@@ -230,8 +292,21 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/DrawSVGPlugin.min.js"></script>
 
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script>
+      let scheduledData = localStorage.getItem('scheduled')
+      const preloader = document.getElementById('preloader');
+      if(scheduledData){
+       preloader.remove()
+
+      }
+      else{
+        window.location.href = 'apply-now.html'
+      }
+    </script>
   </body>
 </html>
