--- a/why-chipr.html
+++ b/why-chipr.html
@@ -393,7 +393,8 @@
         </div>
         <div class="item">
           <div class="box box2">
-            <div class="box-content">$65K–$85K average in year one</div>
+            <div class="box-content">Earn an average of $65K–$85K in year one
+            </div>
           </div>
         </div>
         <div class="item">
@@ -415,13 +416,13 @@
       <section id="logo-animation" class="professional section">
         <div class="container custom-container">
           <div class="row">
-            <div class="col-6 col-xl-3 col-lg-3 col-md-3 align-items-center">
+            <div class="col-6 col-xl-3 col-lg-3 col-md-4 align-items-center">
               <div class="h-100 mt-6">
               <h2 data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">Professional <br/> growth</h2>
               <p data-aos="fade-up" data-aos-delay="200" data-aos-anchor-placement="top-bottom">Build your career at lightning speed. 87% of managers started right where you are—daily coaching and clear promotion pathways.</p>
             </div>
             </div>
-            <div class="col-6 col-xl-4 col-lg-4 col-md-4 offset-xl-3 offset-lg-4 offset-md-4">
+            <div class="col-6 col-xl-4 col-lg-4 col-md-4 offset-xl-3 offset-lg-4 offset-md-3">
               <img src="assets/img/professional-img.png" class="img-fluid" height="468" data-aos="zoom-in"
               data-aos-delay="200"
               data-aos-duration="600" />
@@ -492,14 +493,14 @@
                     </div>
                     <div class="col-4" data-aos="fade-up" data-aos-delay="400" data-aos-anchor-placement="top-bottom">
                       <img src="assets/img/16-30.png" class="img-fluid" width="62" />
-                      <p class="mt-12">Refine objections, total 20 sales.</p>
+                      <p class="mt-12">Address objections, achieve 20 sales</p>
                     </div>
                     <div class="col-4" data-aos="fade-up" data-aos-delay="500" data-aos-anchor-placement="top-bottom">
                       <img src="assets/img/31-60.png" class="img-fluid" width="62" />
                       <p class="mt-12">Leadership shadow, push 40+ sales, milestone bonus.</p>
                     </div>
                     <div class="col-12 mt-5" data-aos="fade-up" data-aos-delay="600" data-aos-anchor-placement="top-bottom">
-                      <a class="cta-btn">Unlock Your Potential <i class="bi bi-arrow-right-short"></i></a>
+                      <a class="cta-btn">Unlock Your Potential </a>
                     </div>
                   </div>
               </div>
@@ -529,7 +530,8 @@
                     </div>
                     <div class="d-flex align-items-center justify-content-start mt-4 gap-3"  data-aos="fade-up" data-aos-delay="400" data-aos-anchor-placement="top-bottom">
                       <img src="assets/img/16-30.png" class="img-fluid" width="42" />
-                      <p class="mt-12">Refine objections, <br/> total 20 sales.</p>
+                      <p class="mt-12">Address objections, <br/>achieve 20 sales
+                      </p>
                     </div>
                     <div class="d-flex align-items-center justify-content-start mt-4 gap-3"  data-aos="fade-up" data-aos-delay="500" data-aos-anchor-placement="top-bottom">
                       <img src="assets/img/31-60.png" class="img-fluid" width="42" />
@@ -561,7 +563,7 @@
    <section id="team-support" class="team-support section" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
     <div class="container custom-container">
       <div class="row">
-        <div class="col-10 offset-1 col-xl-4 col-lg-4 col-md-4 offset-xl-0 offset-lg-0 offset-md-0">
+        <div class="col-10 offset-1 col-xl-4 col-lg-4 col-md-7">
           <div class="content-wrap">
             <h2 data-aos="fade-up" data-aos-delay="200" data-aos-anchor-placement="top-bottom">Team Support</h2>
             <p data-aos="fade-up" data-aos-delay="300" data-aos-anchor-placement="top-bottom">Daily coaching, real-time performance tracking, and a collaborative environment that thrives on friendly competition.</p>
@@ -685,40 +687,40 @@
       <h2 data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom"><span class="text-accent">#Chipr</span>Wall</h2>
       <div class="grid-wrapper">
         <!-- Repeat for each image -->
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-1.jpg" class="grid-image" alt="Image 1" >
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-2.jpg" class="grid-image" alt="Image 2">
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-3.jpg" class="grid-image" alt="Image 3">
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-4.jpg" class="grid-image" alt="Image 4">
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-5.jpg" class="grid-image" alt="Image 5">
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-6.jpg" class="grid-image" alt="Image 6">
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-7.jpg" class="grid-image" alt="Image 7">
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-8.jpg" class="grid-image" alt="Image 8">
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-9.jpg" class="grid-image" alt="Image 9">
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-10.jpg" class="grid-image" alt="Image 10">
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-11.jpg" class="grid-image" alt="Image 11">
         </div>
-        <div class="grid-item">
+        <div class="grid-item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-12.jpg" class="grid-image" alt="Image 12">
         </div>
       </div>
@@ -729,40 +731,40 @@
         <h2 data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom"><span class="text-accent">#Chipr</span>Wall</h2>
       </div>
       <div class="scroll-pane" data-aos="zoom-in-left" data-aos-delay="200" data-aos-anchor-placement="center-left">
-        <div class="item" >
+        <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
           <img src="./assets/img/chipr-wall-1.jpg" class="img-fluid" />
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-2.jpg" class="img-fluid" />
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-3.jpg" class="img-fluid" >
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-4.jpg" class="img-fluid" />
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-5.jpg" class="img-fluid" />
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-6.jpg" class="img-fluid" />
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-7.jpg" class="img-fluid" />
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-8.jpg" class="img-fluid" />
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-9.jpg" class="img-fluid" />
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-10.jpg" class="img-fluid" />
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-11.jpg" class="img-fluid" />
       </div>
-      <div class="item">
+      <div class="item" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <img src="./assets/img/chipr-wall-12.jpg" class="img-fluid" />
       </div>
       </div>
@@ -771,10 +773,10 @@
       <section id="testimonal" class="testimonials section" data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="top-bottom">
         <div class="container custom-container">
           <div class="row">
-            <div class="col-7 col-xl-3 col-lg-3 col-md-3">
-              <h2 data-aos="fade-up" data-aos-delay="200" data-aos-anchor-placement="top-bottom">Don't Take Our Word For It</h2>
+            <div class="col-7 col-xl-4 col-lg-4 col-md-4">
+              <h2 data-aos="fade-up" data-aos-delay="200" data-aos-anchor-placement="top-bottom">Don’t just take our word for it </h2>
             </div>
-          <div class="col-12 col-xl-9 col-lg-9 col-md-9">
+          <div class="col-12 col-xl-8 col-lg-8 col-md-8">
             <div class="row align-items-stretch w-full">
             <div class="col-12 col-xl-6 col-lg-6 col-md-6">
               <div class="quote-content h-100" data-aos="fade-up" data-aos-delay="200" data-aos-anchor-placement="top-bottom">
@@ -814,26 +816,25 @@
                   src="./assets/img/logo.svg"
                   alt="chipr"
                   data-aos="fade-up"
-                  data-aos-delay="250"
-                  data-aos-anchor-placement="center-center"
+                  data-aos-delay="200"
                 />
               </div>
               <div class="col-8">
                 <nav class="footer-navmenu">
                   <ul>
-                    <li data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor-placement="center-left">
+                    <li data-aos="fade-up" data-aos-delay="100" data-aos-anchor-placement="center-left">
                       <a href="/careers">Careers</a>
                     </li>
-                    <li data-aos="zoom-in-right" data-aos-delay="180">
+                    <li data-aos="fade-up" data-aos-delay="180">
                       <a href="/why-chipr">Why Chipr</a>
                     </li>
-                    <li data-aos="zoom-in-right" data-aos-delay="260">
+                    <li data-aos="fade-up" data-aos-delay="260">
                       <a href="/success-stories">Success Stories</a>
                     </li>
-                    <li data-aos="zoom-in-right" data-aos-delay="340">
+                    <li data-aos="fade-up" data-aos-delay="340">
                       <a href="/role-highlights">Role Highlights</a>
                     </li>
-                    <li data-aos="zoom-in-right" data-aos-delay="420">
+                    <li data-aos="fade-up" data-aos-delay="420">
                       <a class="cta-btn cta-btn-w" href="apply-now.html">Apply Now</a>
                     </li>
                   </ul>
@@ -843,21 +844,21 @@
                 <div class="social-links d-flex justify-content-end">
                   <a
                     href="https://www.facebook.com/profile.php?id=61559278246860"
-                    data-aos="zoom-in-left"
+                    data-aos="fade-up"
                     data-aos-delay="100"
                     target="_blank"
                     ><i class="bi bi-facebook"></i
                   ></a>
                   <a
                     href="https://www.instagram.com/chipr.sales/"
-                    data-aos="zoom-in-left"
+                    data-aos="fade-up"
                     data-aos-delay="200"
                     target="_blank"
                     ><i class="bi bi-instagram"></i
                   ></a>
                   <a
                     href="https://www.linkedin.com/company/chiprhomesolutions/"
-                    data-aos="zoom-in-left"
+                    data-aos="fade-up"
                     data-aos-delay="200"
                     target="_blank"
                     ><i class="bi bi-linkedin"></i
