--- a/index.html
+++ b/index.html
@@ -773,6 +773,7 @@
     window.location.href = 'careers.html'
   })
   $('#closeModal').on('click', function() {
+    localStorage.clear()
     window.location.href = 'careers.html'
   })
 
